--- a/style.css
+++ b/style.css
@@ -57,10 +57,13 @@ body {
       clip-path: polygon(0% 0%, 25% 0, 50% 0, 75% 0, 100% 0%, 100% 100%, 0 100%);
     }
     12% {
+      clip-path: polygon(0% 0%, 25% 0, 50% 0, 75% 0, 100% 0%, 100% 100%, 0 100%);
+    }
+    12% {
       clip-path: polygon(0% 0%, 42% 0, 64% 17%, 83% 29%, 100% 33%, 100% 100%, 0 100%); 
     }
-    12.5% {
-      clip-path: polygon(0% 0%, 52% 0, 64% 17%, 83% 29%, 100% 33%, 100% 100%, 0 100%); 
+    24% {
+      clip-path: polygon(0 26%, 35% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
     }
     24% {
       clip-path: polygon(0 26%, 35% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
@@ -68,7 +71,16 @@ body {
     25% {
       clip-path: polygon(0 26%, 30% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
     }
+    25% {
+      clip-path: polygon(0 26%, 30% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
+    }
     37% {
+      clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
+    }
+    37% {
+      clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
+    }
+    37.5% {
       clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
     }
     37.5% {
@@ -77,10 +89,22 @@ body {
     49% {
       clip-path: polygon(0 48%, 24% 45%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
     }
+    49% {
+      clip-path: polygon(0 48%, 24% 45%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
+    }
+    50% {
+      clip-path: polygon(0 48%, 24% 44%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
+    }
     50% {
       clip-path: polygon(0 48%, 24% 44%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
     }
     62% {
+      clip-path: polygon(0 48%, 24% 44%, 48% 51%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
+    }
+    62% {
+      clip-path: polygon(0 48%, 24% 44%, 48% 51%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
+    }
+    62.5% {
       clip-path: polygon(0 48%, 24% 44%, 48% 51%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
     }
     62.5% {
@@ -89,10 +113,19 @@ body {
     74% {
       clip-path: polygon(0 73%, 24% 67%, 43% 58%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
     }
+    74% {
+      clip-path: polygon(0 73%, 24% 67%, 43% 58%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
+    }
     75% {
       clip-path: polygon(0 73%, 24% 67%, 43% 58%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
     }
     87% {
+      clip-path: polygon(0 73%, 24% 67%, 43% 72%, 79% 90%, 100% 92%, 100% 100%, 0 100%);
+    }
+    87% {
+      clip-path: polygon(0 73%, 24% 67%, 43% 72%, 79% 90%, 100% 92%, 100% 100%, 0 100%);
+    }
+    87.5% {
       clip-path: polygon(0 73%, 24% 67%, 43% 72%, 79% 90%, 100% 92%, 100% 100%, 0 100%);
     }
     87.5% {
