--- a/style.css
+++ b/style.css
@@ -63,31 +63,25 @@ body {
       clip-path: polygon(0% 0%, 42% 0, 64% 17%, 83% 29%, 100% 33%, 100% 100%, 0 100%); 
     }
     24% {
-      clip-path: polygon(0 26%, 35% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
+      clip-path: polygon(0% 0%, 42% 0, 64% 17%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
     }
     24% {
       clip-path: polygon(0 26%, 35% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
     }
     25% {
-      clip-path: polygon(0 26%, 30% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
+      clip-path: polygon(0 26%, 35% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
     }
     25% {
       clip-path: polygon(0 26%, 30% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
     }
     37% {
-      clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
+      clip-path: polygon(0 26%, 30% 30%, 48% 26%, 83% 29%, 100% 33%, 100% 100%, 0 100%);
     }
     37% {
       clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
     }
-    37.5% {
-      clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
-    }
-    37.5% {
-      clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
-    }
     49% {
-      clip-path: polygon(0 48%, 24% 45%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
+      clip-path: polygon(0 26%, 24% 30%, 48% 29%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
     }
     49% {
       clip-path: polygon(0 48%, 24% 45%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
@@ -95,40 +89,22 @@ body {
     50% {
       clip-path: polygon(0 48%, 24% 44%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
     }
-    50% {
+    62% {
       clip-path: polygon(0 48%, 24% 44%, 48% 48%, 79% 48%, 100% 54%, 100% 100%, 0 100%);
     }
     62% {
       clip-path: polygon(0 48%, 24% 44%, 48% 51%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
     }
-    62% {
-      clip-path: polygon(0 48%, 24% 44%, 48% 51%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
-    }
-    62.5% {
-      clip-path: polygon(0 48%, 24% 44%, 48% 51%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
-    }
-    62.5% {
+    74% {
       clip-path: polygon(0 48%, 24% 44%, 48% 51%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
     }
     74% {
       clip-path: polygon(0 73%, 24% 67%, 43% 58%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
     }
-    74% {
-      clip-path: polygon(0 73%, 24% 67%, 43% 58%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
-    }
-    75% {
+    87% {
       clip-path: polygon(0 73%, 24% 67%, 43% 58%, 79% 68%, 100% 70%, 100% 100%, 0 100%);
     }
     87% {
-      clip-path: polygon(0 73%, 24% 67%, 43% 72%, 79% 90%, 100% 92%, 100% 100%, 0 100%);
-    }
-    87% {
-      clip-path: polygon(0 73%, 24% 67%, 43% 72%, 79% 90%, 100% 92%, 100% 100%, 0 100%);
-    }
-    87.5% {
-      clip-path: polygon(0 73%, 24% 67%, 43% 72%, 79% 90%, 100% 92%, 100% 100%, 0 100%);
-    }
-    87.5% {
       clip-path: polygon(0 73%, 24% 67%, 43% 72%, 79% 90%, 100% 92%, 100% 100%, 0 100%);
     }
     99% {
@@ -144,9 +120,12 @@ body {
       clip-path: polygon(0% 0%, 52% 0, 50% 0, 75% 0, 100% 0%, 100% 100%, 0 100%);
     }
     12% {
+      clip-path: polygon(0% 0%, 52% 0, 50% 0, 75% 0, 100% 0%, 100% 100%, 0 100%);
+    }
+    12% {
       clip-path: polygon(0% 0%, 52% 0, 61% 19%, 79% 31%, 100% 36%, 100% 100%, 0 100%);
     }
-    12.5% {
+    24% {
       clip-path: polygon(0% 0%, 52% 0, 61% 19%, 79% 31%, 100% 36%, 100% 100%, 0 100%);
     }
     24% {
@@ -155,10 +134,13 @@ body {
     25% {
       clip-path: polygon(0 28%, 24% 32%, 48% 28%, 79% 31%, 100% 36%, 100% 100%, 0 100%);
     }
-    37% {
-        clip-path: polygon(0 28%, 24% 32%, 48% 32%, 79% 51%, 100% 56%, 100% 100%, 0 100%);
+    25% {
+      clip-path: polygon(0 28%, 24% 32%, 48% 28%, 79% 31%, 100% 36%, 100% 100%, 0 100%);
     }
-    37.5% {
+    37% {
+      clip-path: polygon(0 28%, 24% 32%, 48% 28%, 79% 31%, 100% 36%, 100% 100%, 0 100%);
+    }
+    37% {
         clip-path: polygon(0 28%, 24% 32%, 48% 32%, 79% 51%, 100% 56%, 100% 100%, 0 100%);
     }
     49% {
@@ -167,22 +149,25 @@ body {
     50% {
       clip-path: polygon(0 50%, 24% 46%, 48% 50%, 79% 51%, 100% 56%, 100% 100%, 0 100%);
     }
+    50% {
+      clip-path: polygon(0 50%, 24% 46%, 48% 50%, 79% 51%, 100% 56%, 100% 100%, 0 100%);
+    }
+    62% {
+      clip-path: polygon(0 50%, 24% 46%, 48% 50%, 79% 51%, 100% 56%, 100% 100%, 0 100%);
+    }
     62% {
       clip-path: polygon(0 50%, 24% 46%, 48% 53%, 79% 70%, 100% 72%, 100% 100%, 0 100%);
     }
-    62.5% {
+    74% {
       clip-path: polygon(0 50%, 24% 46%, 48% 53%, 79% 70%, 100% 72%, 100% 100%, 0 100%);
     }
     74% {
       clip-path: polygon(0 75%, 24% 69%, 43% 60%, 79% 70%, 100% 72%, 100% 100%, 0 100%);
     }
-    75% {
+    87% {
       clip-path: polygon(0 75%, 24% 69%, 43% 60%, 79% 70%, 100% 72%, 100% 100%, 0 100%);
     }
     87% {
-      clip-path: polygon(0 75%, 24% 69%, 43% 74%, 79% 92%, 100% 94%, 100% 100%, 0 100%);
-    }
-    87.5% {
       clip-path: polygon(0 75%, 24% 69%, 43% 74%, 79% 92%, 100% 94%, 100% 100%, 0 100%);
     }
     99% {
